# labs1-cplus

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh  clima.celsius  labs1-2.cpp
celsius/: Celsius.cpp  Celsius.hpp
